Round img with flex-shrink 768px = avoid stretch

--- a/css/media_query.css
+++ b/css/media_query.css
@@ -24,6 +24,10 @@
   #partners .col .card {
     display: flex;
   }
+  #partners .col .card .partner-img{
+    flex-shrink: 0;
+  }
+  
   /*Section 4 Partners*/
   #benefits .cards {
     display: flex;
